fixed icon positioning to be by width, so no overflow on page

--- a/css/faqs.css
+++ b/css/faqs.css
@@ -59,19 +59,19 @@
 
 #faqs .icon1 {
   float: left;
-  top: -50px;
+  top: -1em;
 }
 
 #faqs .icon2 {
   float: right;
-  top: -15px;
-  right: 50px;
+  top: -1em;
+  right: 10%;
 }
 
 #faqs .icon3 {
   float: right;
-  top: -40px;
-  right: -30px;
+  top: -.1em;
+  right: 5%;
 }
 
 #faqs .clearfix:after {
